# upsat-iac-software

./: .travis.yml  CMakeLists.txt  README.md
CMakeModules/: FindXiApi.cmake
src/: CMakeLists.txt  camera.c  camera.h  iac.c  iac.h  image.c  image.h  obc.c  obc.h  spi.c  spi.h  utils.c  utils.h
test/: CMakeLists.txt  iac-spi-test.c
